--- a/search.html
+++ b/search.html
@@ -458,19 +458,8 @@
               <br _ngcontent-qaq-c127="">
               <div _ngcontent-qaq-c127="" class="input-group">
                 <span class="" id="hide-query-btn">
-                  <svg aria-hidden="true" width="10" height="10" focusable="false" data-prefix="fas" data-icon="chevron-left"
-                    class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                    <path fill="currentColor"
-                      d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
-                    </path>
-                  </svg>
-                  <svg aria-hidden="true" width="10" height="10" focusable="false" data-prefix="fas" data-icon="chevron-right"
-                    class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                    <path fill="currentColor"
-                      d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
-                    </path>
-                  </svg>
-                  </span>
+                  <i id="toggle-arrow" class="arrow left"></i>
+                </span>
                 <input _ngcontent-qaq-c127="" type="search" placeholder="Search..." aria-label="query"
                   aria-describedby="button-addon" class="search-input form-control ng-untouched ng-pristine ng-valid"
                   ng-reflect-model="coronavirus">
@@ -1098,23 +1087,24 @@
         </div>
 
         <!-- <div class="note-box"> -->
-          <div class="notes-side-panel row" id="hide-note-panel">
-            <!-- <aside> -->
-              <button class="btn btn-sm side-panel-btn" id="hide-note-btn">
-                <svg aria-hidden="true" width="16" height="16" focusable="false" data-prefix="far" data-icon="window-close"
-                class="svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <path fill="currentColor"
-                  d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z">
-                </path>
-              </svg>
-            </button>
-              <h5>Notes.....</h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat accusamus, esse asperiores debitis
-                tenetur temporibus iure reprehenderit quo cupiditate saepe. Illo accusamus ullam dolor reiciendis magni?
-                Necessitatibus expedita cupiditate laboriosam?</p>
-              
-            <!-- </aside> -->
-          </div>
+        <div class="notes-side-panel row" id="hide-note-panel">
+          <!-- <aside> -->
+          <button class="btn btn-sm side-panel-btn" id="hide-note-btn">
+            <svg aria-hidden="true" width="16" height="16" focusable="false" data-prefix="far" data-icon="window-close"
+              class="svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512">
+              <path fill="currentColor"
+                d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z">
+              </path>
+            </svg>
+          </button>
+          <h5>Notes.....</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat accusamus, esse asperiores debitis
+            tenetur temporibus iure reprehenderit quo cupiditate saepe. Illo accusamus ullam dolor reiciendis magni?
+            Necessitatibus expedita cupiditate laboriosam?</p>
+
+          <!-- </aside> -->
+        </div>
         <!-- </div> -->
         </div>
       </section>
@@ -1144,6 +1134,12 @@
     const btnNoteHide = document.getElementById("hide-note-btn");
     const noteHide = document.getElementById("hide-note-panel");
     const btnNoteShow = document.getElementById("show-note-panel")
+    const toggleArrow = document.getElementById("toggle-arrow");
+
+    // toggle class on arrow
+    toggleArrow.addEventListener("click", (event) => {
+      toggleArrow.classList.toggle("right")
+    })
 
     // hide/show query panel
     btnHide.addEventListener("click", () => {
