--- a/landing.html
+++ b/landing.html
@@ -13,52 +13,56 @@
 
 <body>
   <div class="Top">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"> <img class="brand" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png"
-          alt=""> </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropDown1" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <svg aria-hidden="true" widht="26" height="26" focusable="false" data-prefix="fas" data-icon="cog"
-                class="svg-inline--fa fa-cog fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 512 512">
-                <path fill="currentColor"
-                  d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z">
-                </path>
-              </svg>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left" aria-labelledby="dropDown1">
-              <a class="dropdown-item" href="#">Settings</a>
-              <a class="dropdown-item" href="#">Feedback</a>
-              <a class="dropdown-item" href="https://iterativesearch.com/" target="_blank">About</a>
-            </div>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropDown2" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <svg aria-hidden="true" width="24" height="24" focusable="false" data-prefix="fas" data-icon="user-alt"
-                class="svg-inline--fa fa-user-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 512 512">
-                <path fill="currentColor"
-                  d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z">
-                </path>
-              </svg>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropDown2">
-              <a class="dropdown-item" href="#">My Account</a>
-              <a class="dropdown-item" href="#">Clear Data</a>
-              <a class="dropdown-item" href="#">Log Out</a>
-            </div>
-          </li>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="border-box">
+
+
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"> <img class="brand" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png"
+            alt=""> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropDown1" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <svg aria-hidden="true" widht="26" height="26" focusable="false" data-prefix="fas" data-icon="cog"
+                  class="svg-inline--fa fa-cog fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512">
+                  <path fill="currentColor"
+                    d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z">
+                  </path>
+                </svg>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left" aria-labelledby="dropDown1">
+                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="#">Feedback</a>
+                <a class="dropdown-item" href="https://iterativesearch.com/" target="_blank">About</a>
+              </div>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropDown2" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <svg aria-hidden="true" width="24" height="24" focusable="false" data-prefix="fas" data-icon="user-alt"
+                  class="svg-inline--fa fa-user-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512">
+                  <path fill="currentColor"
+                    d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z">
+                  </path>
+                </svg>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropDown2">
+                <a class="dropdown-item" href="#">My Account</a>
+                <a class="dropdown-item" href="#">Clear Data</a>
+                <a class="dropdown-item" href="#">Log Out</a>
+              </div>
+            </li>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
   <div class="isearch-logo">
     <a class="navbar-brand" href="#"> <img class="logo" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png"
@@ -77,35 +81,40 @@
   </div> -->
   <div class="row search">
     <div class="col-sm-4">
-      <div class="card">
-        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-        <div class="card-footer">
-          <h3 class="text-muted">Ants</h3>
+      <a href="#">
+        <div class="card">
+          <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+          <div class="card-footer">
+            <h5 class="text-muted">Ants</h5>
+          </div>
         </div>
-      </div>
+      </a>
+
     </div>
     <div class="col-sm-4">
-      <div class="card">
-        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-        <div class="card-footer">
-          <h3 class="text-muted">Spiders</h3>
+      <a href="#">
+        <div class="card">
+          <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+          <div class="card-footer">
+            <h5 class="text-muted">Spiders</h5>
+          </div>
         </div>
-      </div>
+      </a>
+
     </div>
     <div class="col-sm-4">
-      <div class="card">
-        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-        <div class="card-footer">
-          <h3 class="text-muted">Moths</h3>
+      <a href="#">
+        <div class="card">
+          <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+          <div class="card-footer">
+            <h5 class="text-muted">Moths</h5>
+          </div>
         </div>
-      </div>
+      </a>
+
     </div>
   </div>
 
-
-  <!-- <nav class="navbar fixed-bottom navbar justify-content-center">
-   collapse side example here
-  </nav> -->
 
 
 
